# libezp2023plus

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/: ezp_chips_data_file.h  ezp_errors.h  ezp_prog.h
src/: ezp_chips_data_file.c  ezp_prog.c
